atg/torch_wrapper_gen.odin


foreign lib {
	atg___and__ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg___and__tensor_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg___iand__ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg___iand__tensor_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg___ilshift__ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg___ilshift__tensor_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg___ior__ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg___ior__tensor_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg___irshift__ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg___irshift__tensor_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg___ixor__ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg___ixor__tensor_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg___lshift__ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg___lshift__scalar_out_ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg___lshift__tensor_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg___lshift__tensor_out_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg___or__ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg___or__tensor_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg___rshift__ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg___rshift__scalar_out_ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg___rshift__tensor_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg___rshift__tensor_out_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg___xor__ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg___xor__tensor_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg__adaptive_avg_pool2d :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int) ---
	atg__adaptive_avg_pool2d_backward :: proc(out: ^Tensor, grad_output: Tensor, self: Tensor) ---
	atg__adaptive_avg_pool2d_backward_out :: proc(out: ^Tensor, grad_output: Tensor, self: Tensor) ---
	atg__adaptive_avg_pool2d_out :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int) ---
	atg__adaptive_avg_pool3d :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int) ---
	atg__adaptive_avg_pool3d_backward :: proc(out: ^Tensor, grad_output: Tensor, self: Tensor) ---
	atg__adaptive_avg_pool3d_backward_out :: proc(out: ^Tensor, grad_output: Tensor, self: Tensor) ---
	atg__adaptive_avg_pool3d_out :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int) ---
	atg__add_batch_dim :: proc(out: ^Tensor, self: Tensor, batch_dim: i64, level: i64) ---
	atg__add_relu :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg__add_relu_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg__add_relu_out :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg__add_relu_scalar :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg__add_relu_scalar_ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg__add_relu_scalar_out :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg__addmm_activation :: proc(out: ^Tensor, self: Tensor, mat1: Tensor, mat2: Tensor, use_gelu: c.int) ---
	atg__addmm_activation_out :: proc(out: ^Tensor, self: Tensor, mat1: Tensor, mat2: Tensor, use_gelu: c.int) ---
	atg__aminmax :: proc(out: ^Tensor, self: Tensor) ---
	atg__aminmax_dim :: proc(out: ^Tensor, self: Tensor, dim: i64, keepdim: c.int) ---
	atg__aminmax_dim_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, self: Tensor, dim: i64, keepdim: c.int) ---
	atg__aminmax_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, self: Tensor) ---
	atg__amp_update_scale :: proc(out: ^Tensor, self: Tensor, growth_tracker: Tensor, found_inf: Tensor, scale_growth_factor: f64, scale_backoff_factor: f64, growth_interval: i64) ---
	atg__amp_update_scale_ :: proc(out: ^Tensor, self: Tensor, growth_tracker: Tensor, found_inf: Tensor, scale_growth_factor: f64, scale_backoff_factor: f64, growth_interval: i64) ---
	atg__amp_update_scale_out :: proc(out: ^Tensor, self: Tensor, growth_tracker: Tensor, found_inf: Tensor, scale_growth_factor: f64, scale_backoff_factor: f64, growth_interval: i64) ---
	atg__assert_scalar :: proc(self_scalar: Scalar, assert_msg_ptr: cstring, assert_msg_len: c.int) ---
	atg__assert_tensor_metadata :: proc(a: Tensor, size_data: [^]i64, size_len: c.int, stride_data: [^]i64, stride_len: c.int, dtype: c.int, device: c.int, layout: rawptr) ---
	atg__autocast_to_full_precision :: proc(out: ^Tensor, self: Tensor, cuda_enabled: c.int, cpu_enabled: c.int) ---
	atg__autocast_to_reduced_precision :: proc(out: ^Tensor, self: Tensor, cuda_enabled: c.int, cpu_enabled: c.int, cuda_dtype: c.int, cpu_dtype: c.int) ---
	atg__batch_norm_no_update :: proc(out: ^Tensor, input: Tensor, weight: Tensor, bias: Tensor, running_mean: Tensor, running_var: Tensor, momentum: f64, eps: f64) ---
	atg__batch_norm_no_update_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, out2: Tensor, out3: Tensor, input: Tensor, weight: Tensor, bias: Tensor, running_mean: Tensor, running_var: Tensor, momentum: f64, eps: f64) ---
	atg__batch_norm_with_update :: proc(out: ^Tensor, input: Tensor, weight: Tensor, bias: Tensor, running_mean: Tensor, running_var: Tensor, momentum: f64, eps: f64) ---
	atg__batch_norm_with_update_functional :: proc(out: ^Tensor, input: Tensor, weight: Tensor, bias: Tensor, running_mean: Tensor, running_var: Tensor, momentum: f64, eps: f64) ---
	atg__batch_norm_with_update_out :: proc(out: ^Tensor, save_mean: Tensor, save_invstd: Tensor, reserve: Tensor, input: Tensor, weight: Tensor, bias: Tensor, running_mean: Tensor, running_var: Tensor, momentum: f64, eps: f64) ---
	atg__cast_byte :: proc(out: ^Tensor, self: Tensor, non_blocking: c.int) ---
	atg__cast_char :: proc(out: ^Tensor, self: Tensor, non_blocking: c.int) ---
	atg__cast_double :: proc(out: ^Tensor, self: Tensor, non_blocking: c.int) ---
	atg__cast_float :: proc(out: ^Tensor, self: Tensor, non_blocking: c.int) ---
	atg__cast_half :: proc(out: ^Tensor, self: Tensor, non_blocking: c.int) ---
	atg__cast_int :: proc(out: ^Tensor, self: Tensor, non_blocking: c.int) ---
	atg__cast_long :: proc(out: ^Tensor, self: Tensor, non_blocking: c.int) ---
	atg__cast_short :: proc(out: ^Tensor, self: Tensor, non_blocking: c.int) ---
	atg__cdist_backward :: proc(out: ^Tensor, grad: Tensor, x1: Tensor, x2: Tensor, p: f64, cdist: Tensor) ---
	atg__cdist_backward_out :: proc(out: ^Tensor, grad: Tensor, x1: Tensor, x2: Tensor, p: f64, cdist: Tensor) ---
	atg__cholesky_solve_helper :: proc(out: ^Tensor, self: Tensor, A: Tensor, upper: c.int) ---
	atg__cholesky_solve_helper_out :: proc(out: ^Tensor, self: Tensor, A: Tensor, upper: c.int) ---
	atg__chunk_cat :: proc(out: ^Tensor, tensors_data: ^Tensor, tensors_len: c.int, dim: i64, num_chunks: i64) ---
	atg__chunk_cat_out :: proc(out: ^Tensor, tensors_data: ^Tensor, tensors_len: c.int, dim: i64, num_chunks: i64) ---
	atg__coalesce :: proc(out: ^Tensor, self: Tensor) ---
	atg__coalesce_out :: proc(out: ^Tensor, self: Tensor) ---
	atg__coalesced :: proc(out: ^Tensor, self: Tensor, coalesced: c.int) ---
	atg__coalesced_ :: proc(out: ^Tensor, self: Tensor, coalesced: c.int) ---
	atg__coalesced_out :: proc(out: ^Tensor, self: Tensor, coalesced: c.int) ---
	atg__compute_linear_combination :: proc(out: ^Tensor, input: Tensor, coefficients: Tensor) ---
	atg__compute_linear_combination_out :: proc(out: ^Tensor, input: Tensor, coefficients: Tensor) ---
	atg__conj :: proc(out: ^Tensor, self: Tensor) ---
	atg__conj_copy :: proc(out: ^Tensor, self: Tensor) ---
	atg__conj_copy_out :: proc(out: ^Tensor, self: Tensor) ---
	atg__conj_physical :: proc(out: ^Tensor, self: Tensor) ---
	atg__conj_physical_out :: proc(out: ^Tensor, self: Tensor) ---
	atg__conv_depthwise2d :: proc(out: ^Tensor, self: Tensor, weight: Tensor, kernel_size_data: [^]i64, kernel_size_len: c.int, bias: Tensor, stride_data: [^]i64, stride_len: c.int, padding_data: [^]i64, padding_len: c.int, dilation_data: [^]i64, dilation_len: c.int) ---
	atg__conv_depthwise2d_out :: proc(out: ^Tensor, self: Tensor, weight: Tensor, kernel_size_data: [^]i64, kernel_size_len: c.int, bias: Tensor, stride_data: [^]i64, stride_len: c.int, padding_data: [^]i64, padding_len: c.int, dilation_data: [^]i64, dilation_len: c.int) ---
	atg__convert_indices_from_coo_to_csr :: proc(out: ^Tensor, self: Tensor, size: i64, out_int32: c.int) ---
	atg__convert_indices_from_coo_to_csr_out :: proc(out: ^Tensor, self: Tensor, size: i64, out_int32: c.int) ---
	atg__convert_indices_from_csr_to_coo :: proc(out: ^Tensor, crow_indices: Tensor, col_indices: Tensor, out_int32: c.int, transpose: c.int) ---
	atg__convert_indices_from_csr_to_coo_out :: proc(out: ^Tensor, crow_indices: Tensor, col_indices: Tensor, out_int32: c.int, transpose: c.int) ---
	atg__convert_weight_to_int4pack :: proc(out: ^Tensor, self: Tensor, innerKTiles: i64) ---
	atg__convert_weight_to_int4pack_for_cpu :: proc(out: ^Tensor, self: Tensor, innerKTiles: i64) ---
	atg__convolution :: proc(out: ^Tensor, input: Tensor, weight: Tensor, bias: Tensor, stride_data: [^]i64, stride_len: c.int, padding_data: [^]i64, padding_len: c.int, dilation_data: [^]i64, dilation_len: c.int, transposed: c.int, output_padding_data: [^]i64, output_padding_len: c.int, groups: i64, benchmark: c.int, deterministic: c.int, cudnn_enabled: c.int, allow_tf32: c.int) ---
	atg__convolution_deprecated :: proc(out: ^Tensor, input: Tensor, weight: Tensor, bias: Tensor, stride_data: [^]i64, stride_len: c.int, padding_data: [^]i64, padding_len: c.int, dilation_data: [^]i64, dilation_len: c.int, transposed: c.int, output_padding_data: [^]i64, output_padding_len: c.int, groups: i64, benchmark: c.int, deterministic: c.int, cudnn_enabled: c.int) ---
	atg__convolution_mode :: proc(out: ^Tensor, input: Tensor, weight: Tensor, bias: Tensor, stride_data: [^]i64, stride_len: c.int, padding_ptr: cstring, padding_len: c.int, dilation_data: [^]i64, dilation_len: c.int, groups: i64) ---
	atg__convolution_out :: proc(out: ^Tensor, input: Tensor, weight: Tensor, bias: Tensor, stride_data: [^]i64, stride_len: c.int, padding_data: [^]i64, padding_len: c.int, dilation_data: [^]i64, dilation_len: c.int, transposed: c.int, output_padding_data: [^]i64, output_padding_len: c.int, groups: i64, benchmark: c.int, deterministic: c.int, cudnn_enabled: c.int, allow_tf32: c.int) ---
	atg__copy_from :: proc(out: ^Tensor, self: Tensor, dst: Tensor, non_blocking: c.int) ---
	atg__copy_from_and_resize :: proc(out: ^Tensor, self: Tensor, dst: Tensor) ---
	atg__copy_from_and_resize_out :: proc(out: ^Tensor, self: Tensor, dst: Tensor) ---
	atg__copy_from_out :: proc(out: ^Tensor, self: Tensor, dst: Tensor, non_blocking: c.int) ---
	atg__cslt_compress :: proc(out: ^Tensor, input: Tensor) ---
	atg__cslt_sparse_mm :: proc(out: ^Tensor, compressed_A: Tensor, dense_B: Tensor, bias: Tensor, alpha: Tensor, out_dtype: c.int, transpose_result: c.int, alg_id: i64, split_k: i64, split_k_mode: i64) ---
	atg__ctc_loss :: proc(out: ^Tensor, log_probs: Tensor, targets: Tensor, input_lengths_data: [^]i64, input_lengths_len: c.int, target_lengths_data: [^]i64, target_lengths_len: c.int, blank: i64, zero_infinity: c.int) ---
	atg__ctc_loss_backward :: proc(out: ^Tensor, grad: Tensor, log_probs: Tensor, targets: Tensor, input_lengths_data: [^]i64, input_lengths_len: c.int, target_lengths_data: [^]i64, target_lengths_len: c.int, neg_log_likelihood: Tensor, log_alpha: Tensor, blank: i64, zero_infinity: c.int) ---
	atg__ctc_loss_backward_out :: proc(out: ^Tensor, grad: Tensor, log_probs: Tensor, targets: Tensor, input_lengths_data: [^]i64, input_lengths_len: c.int, target_lengths_data: [^]i64, target_lengths_len: c.int, neg_log_likelihood: Tensor, log_alpha: Tensor, blank: i64, zero_infinity: c.int) ---
